<resources>
    <string name="app_name">Killswitch</string>
    <string name="title_status">Status</string>
    <string name="title_devices">Devices</string>
    <string name="title_settings">Settings</string>
    <string name="disarm">Disarm</string>
    <string name="arm">Engage</string>
    <string name="enable">Gain admin</string>
    <string name="disable">Revoke admin</string>
    <string name="wipe">Wipe device</string>
    <string name="label_hint_admin">Administrator status</string>
    <string name="label_hint_killswitch">Killswitch status</string>
    <string name="label_admin_inactive">Inactive</string>
    <string name="label_admin_active">Active</string>
    <string name="label_killswitch_disarmed">Disarmed</string>
    <string name="label_killswitch_engaged">Engaged</string>
    <string name="explanation">Killswitch allow you to engage wipe locally in device compromisal risk cases</string>
    <!-- settings -->
    <string name="label_wipe_sd">Wipe SD card</string>
    <string name="label_trigger">Trigger wipe by</string>
    <string name="label_trigger_multiclick">Power button multi-click</string>
    <string name="label_click_count">Clicks to trigger</string>
    <!-- BLE -->
    <string name="label_ble_device">BLE device</string>
    <string name="label_ble_scan">Scan …</string>
    <string name="label_ble_unbind">Unbind</string>
    <string name="label_discovery_dismiss">Cancel</string>
    <string name="label_discovery_refresh">Refresh</string>
    <!--USB -->
    <string name="label_usb_lock">Lock on</string>
    <string name="label_usb_unlock">Unlock</string>
</resources>
