<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.status.StatusFragment">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="40dp"
        android:text="@string/app_name"
        android:layout_marginTop="14dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/label_app_name"/>
    <ImageView
        android:layout_marginTop="16dp"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/gear"
        android:scaleType="fitCenter"
        android:layout_below="@+id/label_app_name"
        android:layout_centerHorizontal="true"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/spacer_bottom"/>
    <Button
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_wipe"
        android:text="@string/wipe"
        android:textStyle="bold"
        android:layout_above="@+id/spacer_bottom"
        android:layout_centerHorizontal="true"
        android:background="@color/danger"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_above="@+id/button_wipe"
        android:id="@+id/spacer_wipe"/>
    <ToggleButton
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/spacer_wipe"
        android:textOff="@string/arm"
        android:textOn="@string/disarm"
        android:id="@+id/toggle_engage"
        android:minWidth="50dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/toggle_engage"
        android:text="@string/label_hint_killswitch"
        android:id="@+id/label_killswitch_hint"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/label_admin_hint"
        android:layout_alignBottom="@+id/toggle_engage"
        android:text="@string/label_killswitch_disarmed"
        android:textStyle="bold"
        android:textSize="24dp"
        android:id="@+id/status_killswitch"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/toggle_engage"
        android:minHeight="60dp"
        android:id="@+id/space_1"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/space_1"
        android:layout_alignTop="@id/toggle_activate"
        android:text="@string/label_hint_admin"
        android:id="@+id/label_admin_hint"/>
    <ToggleButton
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/space_1"
        android:layout_alignParentRight="true"
        android:id="@+id/toggle_activate"
        android:textOff="@string/enable"
        android:textOn="@string/disable"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/space_1"
        android:layout_alignRight="@+id/label_admin_hint"
        android:layout_alignBottom="@+id/toggle_activate"
        android:text="@string/label_admin_inactive"
        android:textStyle="bold"
        android:textSize="24dp"
        android:id="@+id/status_admin"/>
</RelativeLayout>